--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 
 <head>
-  <title>TQTALK</title>
+  <title>TVLogFilter</title>
   <meta name="nosnippet">
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
