--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
     ul {
       list-style: none;
     }
+
+    button {
+      width: 60px;
+      height: 30px;
+      font-size: 14px;
+    }
   </style>
 </head>
 
