--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <script type="module" src="tvlog.js"></script>
   <script type="module">
-    import { registerDb } from "./tvlog.js";
+    import { registerDb } from "./tvlog_old.js";
 
     registerDb((data) => {
       const li = document.createElement("li");
