rollback old version

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="nosnippet">
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <script type="module" src="tvlog.js"></script>
+  <script type="module" src="tvlog_old.js"></script>
+  <!-- <script src="tvlog.js"></script> -->
   <script type="module">
     import { registerDb } from "./tvlog_old.js";
 
@@ -23,7 +24,6 @@
       document.getElementById("logs").appendChild(li);
     });
   </script>
-  <script src="tvlog.js"></script>
 
   <style>
     body {
