--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="nosnippet">
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <script type="module" src="tvlog_old.js"></script>
+  <script type="module" src="fblog.js"></script>
   <!-- <script src="tvlog.js"></script> -->
   <script type="module">
-    import { registerDb } from "./tvlog_old.js";
+    import { registerDb } from "./fblog.js";
 
     registerDb((data) => {
       const li = document.createElement("li");
